--- a/package.json
+++ b/package.json
@@ -39,9 +39,6 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.4",
     "@next/eslint-plugin-next": "^11.0.0",
-    "@types/node": "^16.0.0",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
     "@types/styled-components": "^5.1.14",
     "@types/testing-library__jest-dom": "^5.14.1",
     "@types/testing-library__user-event": "^4.2.0",
@@ -60,8 +57,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.0.1",
-    "eslint-plugin-unicorn": "^35.0.0",
-    "typescript": "^4.2.4"
+    "eslint-plugin-unicorn": "^35.0.0"
   },
   "resolutions": {
     "eslint-plugin-react": "7.24.0",
